--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -2,10 +2,10 @@
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:30</td>  <td>Data Intro for Librarians</td> </tr>
+      <tr> <td>09:30</td>  <td>Data Intro for Librarians + Shell Lessons for Libraries</td> </tr>
       <tr> <td>11:00</td>  <td>Morning break</td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Shell Lessons for Libraries</td> </tr>
+      <tr> <td>13:30</td>  <td>Shell Lessons for Libraries + Python Intro for Librarians</td> </tr>
       <tr> <td>14:45</td>  <td>Afternoon break</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
