--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -5,7 +5,7 @@
       <tr> <td>09:00</td>  <td>Data Intro for Librarians + Shell Lessons for Libraries</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Shell Lessons for Libraries + Python Intro for Librarians</td> </tr>
+      <tr> <td>13:00</td>  <td>Shell Lessons for Libraries + Git Intro for Librarians</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
       <tr> <td>15:45</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
@@ -14,10 +14,10 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Python Intro for Librarians</td> </tr>
+      <tr> <td>09:00</td>  <td>Git Intro for Librarians + Python Intro for Librarians</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Git Intro for Librarians</td> </tr>
+      <tr> <td>13:00</td>  <td>Python Intro for Librarians</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
       <tr> <td>15:45</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:00</td>  <td>END</td> </tr>
