--- a/_includes/lc/syllabus.html
+++ b/_includes/lc/syllabus.html
@@ -2,55 +2,13 @@
   <div class="col-md-6">
     <h3 id="syllabus-data">Introduction to Data</h3>
     <ul>
-      <li>Intro to data</li>
-      <li>Jargon busting</li>
-      <li>Keyboard shortcuts</li>
-      <li>Plain text formats</li>
-      <li>Naming files</li>
-      <li>Regular expressions</li>
-      <li><a href="https://librarycarpentry.github.io/lc-data-intro/reference">Reference...</a></li>
-    </ul>
-  </div>
-  <div class="col-md-6">
-    <h3 id="syllabus-shell">The Unix Shell</h3>
-    <ul>
-      <li>Files and directories</li>
-      <li>History and tab completion</li>
-      <li>Counting and sorting contents in files</li>
-      <li>Pipes and redirection</li>
-      <li>Mining or searching in files</li>
-      <li><a href="https://librarycarpentry.github.io/lc-shell/reference">Reference...</a></li>
+      <li>Introduction to SQL</li>
+      <li>Selecting and sorting data</li>
+      <li>Filtering, Ordering and Commenting</li>
+      <li>Aggregating & calculating values</li>
+      <li>Joins and Aliases</li>
+      <li>Saving queries</li>
+      <li><a href="https://librarycarpentry.org/lc-sql/reference.html">Reference...</a></li>
     </ul>
   </div>
 
-</div>
-
-<div class="row">
-  <div class="col-md-6">
-    <h3 id="syllabus-git">Version Control with Git</h3>
-    <ul>
-      <li>Creating a repository</li>
-      <li>Configuring git</li>
-      <li>Recording changes to files: <code>add</code>, <code>commit</code>, ...</li>
-      <li>Viewing state changes with <code>status</code></li>
-      <li>Working on the web: <code>clone</code>, <code>pull</code>, <code>push</code>, ...</li>
-      <li>Where to host work, and why</li>
-      <li><a href="https://librarycarpentry.github.io/lc-git/reference">Reference...</a></li>
-    </ul>
-  </div>
-  <div class="col-md-6">
-    <div class="col-md-6">
-      <h3 id="syllabus-python">Programming in Python</h3>
-      <ul>
-	<li>Using libraries</li>
-	<li>Working with arrays</li>
-	<li>Reading and plotting data</li>
-	<li>Creating and using functions</li>
-	<li>Loops and conditionals</li>
-	<li>Defensive programming</li>
-	<li>Using Python from the command line</li>
-        <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Reference...</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
