--- a/_includes/lc/syllabus.html
+++ b/_includes/lc/syllabus.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-    <h3 id="syllabus-data">Introduction to Data</h3>
+    <h3 id="syllabus-sql">Introduction to SQL</h3>
     <ul>
       <li>Introduction to SQL</li>
       <li>Selecting and sorting data</li>
@@ -12,3 +12,15 @@
     </ul>
   </div>
 
+<div class="row">
+  <div class="col-md-6">
+    <ul>
+    </ul>
+  </div>
+  <div class="col-md-6">
+    <div class="col-md-6">
+      <ul>
+      </ul>
+    </div>
+  </div>
+</div>
