--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -3,7 +3,7 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Introduction</td> </tr>
-      <tr> <td>09:15</td>  <td>Intro to SQL for Librarians</td> </tr>
+      <tr> <td>09:15</td>  <td>Intro to SQL</td> </tr>
       <tr> <td>10:30</td>  <td>Break</td> </tr>
       <tr> <td>10:45</td>  <td>SQL exercises</td> </tr>
       <tr> <td>12:45</td>  <td>Wrap Up and Feedback</td> </tr>
